[package]
name = "streaming-json-completer"
version = "0.1.0"
edition = "2021"
authors = ["Zack Maril <zack@genau.ai>"]
description = ""
keywords = []
license = "MIT"
documentation = "https://genau.ai"
homepage = "https://github.com/genauai/streaming-json-completer"
repository = "https://github.com/genauai/streaming-json-completer"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
combine = "4.6.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1.0.96"
rand = "0.8.5"
arbitrary-json = "0.1.1"
libfuzzer-sys = "0.4.6"