[package]
name = "jawohl"
version = "0.1.1-dev"
edition = "2021"
authors = ["Zack Maril <zack@genau.ai>"]
description = "Complete JSON documents from a stream of JSON tokens"
keywords = []
license = "MIT"
documentation = "https://genau.ai"
homepage = "https://github.com/genauai/jawohl"
repository = "https://github.com/genauai/jawohl"
readme = "README.md"

[dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1.0.96"