[package]
name = "openai_streaming_parse"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.3"
jawohl = {path = "../../../jawohl"}
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
dotenv = "0.15.0"
json-color = "0.7.1"